# IT-security-2019

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE.txt  Makefile  README.txt  cmake_install.cmake  its2019.doxygen  run_cmake.sh
Testing/Temporary/: CTestCostData.txt
ascon/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/: template.doxy.in
ecclib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ecclib/protocols/: ecdh.c  ecdh.h
isap/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  crypto_aead.h  decrypt.c  encrypt.c
pir/: CMakeLists.txt  paillier.cpp  paillier.h  pir_client.cpp  pir_client.h  pir_server.cpp  pir_server.h  primes.h  random.cpp  random.h  shamir.cpp  shamir.h  utils.cpp  utils.h
pir/bigint/: BigInteger.cpp  BigInteger.h  BigInteger1024.cpp  BigInteger1024.h  BigInteger2048.cpp  BigInteger2048.h  types.h
pir/bigint_ref/: BigInteger.h  BigInteger1024.h  BigInteger2048.h  types.h
pir/tests/: CMakeLists.txt  bigint.cpp  paillier.cpp  pir.cpp  shamir.cpp  task3_custom.cpp
pir/tests/data/: as.txt  as1024.txt  bs.txt  bs1024.txt  comp.txt  cs.txt  cs1024.txt  diffs.txt  diffs_mod.txt  diffs_mod1024.txt  es.txt  es1024.txt  invs1024.txt  pir_client_query_1.txt  pir_client_query_2.txt  pir_client_result.txt  pir_server_response_1.txt  pir_server_response_2.txt  prods.txt  quot.txt  shamir_fixed_1.txt  shamir_fixed_2.txt  shamir_fixed_3.txt  shamir_generate_polynomial.txt  sums.txt  sums_mod.txt  sums_mod1024.txt  test_key_generation.txt  test_single_encrypt.txt  xs.txt  ys.txt
tls/: CMakeLists.txt  CTestTestfile.cmake  Makefile  aes128gcm.cpp  aes128gcm.h  ascon128.cpp  ascon128.h  client  client.cpp  cmake_install.cmake  counter.cpp  counter.h  ecdh.cpp  hkdf.cpp  hkdf.h  hmac-sha2.cpp  hmac-sha2.h  isap128.cpp  isap128.h  random.cpp  random.h  secrets.cpp  server  tls-aesgcm.cpp  tls-aesgcm.h  tls-ascon.cpp  tls-ascon.h  tls-handshake-client.cpp  tls-handshake-client.h  tls-handshake-server.cpp  tls-handshake-server.h  tls-isap.cpp  tls-isap.h  tls-record-layer.cpp  tls-record-layer.h  tls.h
tls/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  aesgcm.xml  ascon.cpp  ascon.xml  cmake_install.cmake  ecdh.xml  hkdf.xml  hmac_sha2.xml  nonce.xml  playback.cpp  random.xml  sha2.xml  task1_custom.cpp  task1_custom.xml  task2_custom.cpp  task2_custom.xml  test_aesgcm  test_ascon  test_ecdh  test_hkdf  test_hmac_sha2  test_nonce  test_random  test_sha2  test_task1_custom  test_task2_custom  test_tls_encrypted_record  test_tls_handshake  test_tls_record_layer  tls-encrypted-record.cpp  tls_handshake.cpp  tls_handshake.xml  tls_record_layer.cpp  tls_record_layer.xml
tls/tests/data/: client-change-client-cs.pb  client-change-server-cs.pb  client-handshake-ok-data.pb  isap-testcase-1.sol  isap-testcase-2.sol  isap-testcase-3.sol  isap-testcase-4.sol  isap-testcase-5.sol  isap-testcase-6.sol  server-change-client-cs.pb  server-handshake-ok-data.pb  server-handshake-ok.pb
utils/: CTestTestfile.cmake  Makefile  cmake_install.cmake  tests.h
